# GGStatify

./: README.md  pyproject.toml
GGStatify/: __init__.py  descript.py  distribution.py  probability.py  scaler.py  utils.py
